This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Py_FatalError(): log automatically the function name
Type: Stage: resolved
Components: C API Versions: Python 3.9
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: vstinner
Priority: normal Keywords: patch

Created on 2020-03-06 22:54 by vstinner, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 18819 merged vstinner, 2020-03-06 23:02
PR 19157 merged vstinner, 2020-03-25 18:03
Messages (3)
msg363565 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2020-03-06 22:54
Attached PR modify Py_FatalError() to log automatically the function name.
msg363567 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2020-03-06 23:54
New changeset 9e5d30cc99e34f4c3e7b2cd851de20816c9d1927 by Victor Stinner in branch 'master':
bpo-39882: Py_FatalError() logs the function name (GH-18819)
https://github.com/python/cpython/commit/9e5d30cc99e34f4c3e7b2cd851de20816c9d1927
msg365009 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2020-03-25 18:27
New changeset 87d3b9db4ade1aa100ee6f065082cb7e85b8992f by Victor Stinner in branch 'master':
bpo-39882: Add _Py_FatalErrorFormat() function (GH-19157)
https://github.com/python/cpython/commit/87d3b9db4ade1aa100ee6f065082cb7e85b8992f
History
Date User Action Args
2022-04-11 14:59:27adminsetgithub: 84063
2020-03-25 18:28:14vstinnersetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2020-03-25 18:27:43vstinnersetmessages: + msg365009
2020-03-25 18:03:11vstinnersetpull_requests: + pull_request18517
2020-03-06 23:54:24vstinnersetmessages: + msg363567
2020-03-06 23:02:34vstinnersetkeywords: + patch
stage: patch review
pull_requests: + pull_request18177
2020-03-06 22:54:10vstinnercreate